--- a/source/_posts/并发模拟.md
+++ b/source/_posts/并发模拟.md
@@ -22,7 +22,7 @@ Apache开发的压力测试工具
 
 ### Semaphore
 
-用到Semaphore信号量来模拟同时允许多少线程执行， 如果不能获取信号量， 线程就阻塞。
+用到Semaphore信号量来模拟同时允许多少线程执行， 如果不能获取信号量， 线程就阻塞。 Semaphore内部主要通过AQS（AbstractQueuedSynchronizer）实现线程的管理。 线程运行时首先获取许可permits, 如果成功， 书可数减1， 如果线程运行完释放许可， 许可数就加1. 许可数为0， 则获取失败。 
 
 ### CountDownLatch
 
