wip: atomic int

--- a/source/_posts/线程安全性-原子性.md
+++ b/source/_posts/线程安全性-原子性.md
@@ -13,3 +13,45 @@ tags:
 2. 可见性
 3. 有序性
 
+
+	public class CountExample2 {
+    	// 请求总数
+    	public static int clientTotal = 5000;
+    	// 同时并发执行的线程数
+    	public static int threadTotal = 200;
+    	public static AtomicInteger count = new AtomicInteger();
+
+    	public static void main(String[] args) throws InterruptedException {
+        	ExecutorService executorService = Executors.newCachedThreadPool();
+        	// 信号量
+        	final Semaphore semaphore = new Semaphore(threadTotal);
+        	// 计数器闭锁
+        	final CountDownLatch countDownLatch = new CountDownLatch(clientTotal);
+        	for(int i = 0; i < clientTotal; i++){
+            	executorService.execute(() -> {
+                	try {
+                    	// 信号量模拟同时允许多少个线程执行， 达到一定并发数add会被阻塞
+                    	semaphore.acquire();
+                    	add();
+                    	semaphore.release();
+                	} catch (InterruptedException e) {
+                    	e.printStackTrace();
+                  	  	log.error("Exception", e);
+                	}
+                		// 执行完一次， 计数值减一
+                		countDownLatch.countDown();
+            	});
+        	}
+        	// 保证countdownLatch必须减为0， 这表明所有线程都执行完
+        	countDownLatch.await();
+        	executorService.shutdown();
+        	log.info("Count:{}", count.get());
+    	}
+
+    	private static void add(){
+        	count.incrementAndGet();
+    	}
+	}
+
+AtomicInteger类主要用到CAS的方式， 具体用到compareAndSwapInt函数， 累加前当前值（工作内存）和底层的值（主内存）比较，只有一样才累加。  	
+
