added atomic package

--- a/source/_posts/线程安全性-原子性.md
+++ b/source/_posts/线程安全性-原子性.md
@@ -13,45 +13,52 @@ tags:
 2. 可见性
 3. 有序性
 
+# 原子性实现
 
-	public class CountExample2 {
-    	// 请求总数
-    	public static int clientTotal = 5000;
-    	// 同时并发执行的线程数
-    	public static int threadTotal = 200;
-    	public static AtomicInteger count = new AtomicInteger();
+## AtomicXXX, CAS 
 
-    	public static void main(String[] args) throws InterruptedException {
-        	ExecutorService executorService = Executors.newCachedThreadPool();
-        	// 信号量
-        	final Semaphore semaphore = new Semaphore(threadTotal);
-        	// 计数器闭锁
-        	final CountDownLatch countDownLatch = new CountDownLatch(clientTotal);
-        	for(int i = 0; i < clientTotal; i++){
-            	executorService.execute(() -> {
-                	try {
-                    	// 信号量模拟同时允许多少个线程执行， 达到一定并发数add会被阻塞
-                    	semaphore.acquire();
-                    	add();
-                    	semaphore.release();
-                	} catch (InterruptedException e) {
-                    	e.printStackTrace();
-                  	  	log.error("Exception", e);
-                	}
-                		// 执行完一次， 计数值减一
-                		countDownLatch.countDown();
-            	});
-        	}
-        	// 保证countdownLatch必须减为0， 这表明所有线程都执行完
-        	countDownLatch.await();
-        	executorService.shutdown();
-        	log.info("Count:{}", count.get());
-    	}
+比如AtomicInteger类主要用到CAS的方式， 具体用到compareAndSwapInt函数， 累加前当前值（工作内存）和底层的值（主内存）需要比较，只有一样才累加。  并发环境下CAS失败率高， 一个线程的原子操作可能循环多次尝试，影响性能。  	
 
-    	private static void add(){
-        	count.incrementAndGet();
+
+## AtomicLong, LongAdder
+
+JDK8新增了LongAdder, 和AtomicLong有相似点。 LongAdder有优点，把热点数据分离， 把AtomicLong内部核心数据value被分为一个数组（多个cell）。 每个线程访问时候根据哈希等方法映射到一个节点进行计数。 最终结果为各个节点数据求和累加。 LongAdder等于把AtomicLong单点的更新压力分散到多个节点上。 低并发环境下通过对base的直接更新可以保证和AtomicLong效率基本相同。
+缺点是统计时候如果有并发更新统计数据可能会有误差。 如果要生成全局唯一的序列号就不适合用LongAdder。
+
+## AtomicReference, AtomicReferenceFieldUpdater
+
+	public class AtomicReferenceExample {
+    	private static AtomicReference<Integer> count = new AtomicReference(0);
+    	public static void main(String[] args) {
+        	count.compareAndSet(0, 2);
+        	count.compareAndSet(2, 4);
+        	log.info("count: {}", count.get());
     	}
 	}
 
-AtomicInteger类主要用到CAS的方式， 具体用到compareAndSwapInt函数， 累加前当前值（工作内存）和底层的值（主内存）比较，只有一样才累加。  	
+
+	public class AtomicFieldUpdaterExample {
+    	private static AtomicIntegerFieldUpdater<AtomicFieldUpdaterExample> updater =
+            AtomicIntegerFieldUpdater.newUpdater(AtomicFieldUpdaterExample.class, "count");
+    	@Getter
+    	public volatile int count = 100;
+
+    	public static void main(String[] args) {
+        	AtomicFieldUpdaterExample example = new AtomicFieldUpdaterExample();
+        	if(updater.compareAndSet(example, 100, 120)) {
+            	log.info("update success 1, {}", example.getCount());
+        	}
+        	if(updater.compareAndSet(example, 100, 120)){
+            	log.info("update success 2, {}", example.getCount());
+        	} else {
+            	log.info("update fail, {}", example.getCount());
+        	}
+    	}
+	}
+	只能更新非static的volatile变量
+
+
+## AtomicStampReference: CAS的ABA问题
+
+一个线程把变量A变为B又变回A， 这时候需要维护一个变化的Stamp来反映变量确实变化过。
 
