--- a/source/_posts/线程安全性-原子性.md
+++ b/source/_posts/线程安全性-原子性.md
@@ -62,3 +62,20 @@ JDK8新增了LongAdder, 和AtomicLong有相似点。 LongAdder有优点，把热
 
 一个线程把变量A变为B又变回A， 这时候需要维护一个变化的Stamp来反映变量确实变化过。
 
+# 原子性 - 锁
+
+## synchronized:依赖JVM的同步锁
+
+修饰代码块： 作用于调用的对象
+修饰方法： 作用于调用的对象
+修饰静态方法： 作用于所有对象
+修饰类： 作用于所有对象
+
+## Lock
+依赖特殊的CPU指令， 代码实现， Reentrantlock
+
+# 原子性 - 对比
+
+* Synchronized: 不可中断锁， 适合竞争不激烈， 可读性好
+* Lock: 可中断锁（unlock）， 多样化同步， 竞争激烈时能维持常态
+* Atomic： 竞争激烈时能维持常态， 比lock性能好， 只能同步一个值
