--- a/source/_posts/安全发布对象.md
+++ b/source/_posts/安全发布对象.md
@@ -5,7 +5,6 @@ tags:
 ---
 
 # 基本概念
-
 1. 发布对象： 使一个对象能够被当前范围之外的代码所使用
 2. 对象逸出： 一种错误的发布， 当一个对象还没构造完成时， 就使它被其他线程所见
 
@@ -14,3 +13,68 @@ tags:
 2. 将对象的引用保存在volatile类型域或者AtomicReference对象中
 3. 将对象的引用保存在某个正确构造对象的final类型域中
 4. 将对象的引用保存在一个由锁保护的域中
+
+## 单例模式发布对象
+1. 懒汉模式（通过加锁来确保线程安全， 第一次使用到单例实例的时候进行创建）
+
+// 双重同步锁检测机制不是线程安全的
+// 1. memory = allocate() 分配对象内存空间
+// 2. ctorInstance() 初始化对象
+// 3. instance = memory 设置instance指向刚分配的内存
+// JVM和cpu优化， 发生了指令重拍
+// 1. memory = allocate() 分配对象内存空间
+// 3. instance = memory 设置instance指向刚分配的内存
+// 2. ctorInstance() 初始化对象
+// 线程A执行到3， 线程B会以为instance已经创建好了， 实际上还没有初始化
+
+     // 单例对象
+    private static SingletonExample1 instance = null;
+
+    // 静态的工厂方法
+    public static SingletonExample1 getInstance(){
+        if(instance == null){ //双重检测机制
+            synchronized (SingletonExample2.class) {
+                if (instance == null) {
+                    instance = new SingletonExample1();
+                }
+            }
+        }
+        return instance;
+    }
+
+    *所以单例对象要加volatile， 总结下， volatile使用场景， 一个是状态表示量， 一个是双重检测*   
+
+2. 饿汉模式（线程安全，单例实例在类装载的时候进行创建）
+
+可以通过静态域或者静态块的方式， 单例模式构造方法为private， 防止程序其他地方调用构造方法
+	
+	private SingletonExample2(){ }
+    public static SingletonExample2 instance = null;
+    static{
+        instance = new SingletonExample2();
+    }
+    public SingletonExample2 getInstance(){
+        return instance;
+    }
+
+3. 枚举模式
+
+	public class SingletonExample3 {
+    	private SingletonExample3(){ }
+    	public static SingletonExample3 getInstance(){
+      	  return Singleton.INSTANCE.getInstance();
+    	}
+    	private enum Singleton {
+        	INSTANCE;
+        	private SingletonExample3 singletonExample;
+	        // JVM 保证这个方法绝对只调用一次
+    	    Singleton(){
+        	    singletonExample = new SingletonExample3();
+        	}
+        	public SingletonExample3 getInstance(){
+            	return singletonExample;
+        	}
+    	}
+	}
+
+最安全， 同时像饿汉模式一样在类加载时候初始化
