--- a/source/_posts/线程安全-同步容器.md
+++ b/source/_posts/线程安全-同步容器.md
@@ -16,4 +16,7 @@ HashTable进行了同步处理的key，value不能为null
 
 # 总结
 同步容器不能保证线程安全， 即使同步容器add remove等操作都是synchronized修饰的。 比如一个线程访问remove操作， 一个线程同时操作get
-操作可能出现数组越界的异常。
+操作可能出现数组越界的异常。 
+
+使用iterator和foreach遍历同步容器的时候如果同时有增删操作会导致ConcurrentModificationException。 单线程也会出现。
+可以在循环时候做好标记， 循环结束再增删。
